Introduce socket.io to the webserver
Signed-off-by: Udo Groebner <udo@groebnerweb.de>

--- a/packages/server-web/src/static/index.html
+++ b/packages/server-web/src/static/index.html
@@ -13,6 +13,10 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
   <body>
     <h1>Todastic</h1>
     <p>the musical</p>
