Make a connection create a new todo and retrieve event log on connection
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/server-web/src/static/index.html
+++ b/packages/server-web/src/static/index.html
@@ -14,9 +14,7 @@
     </style>
   </head>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-  </script>
+  <script src="./client.js" type="application/javascript"></script>
   <body>
     <h1>Todastic</h1>
     <p>the musical</p>
