Make socket.io an es6 module by using rollup
Signed-off-by: Joern Bernhardt <joern.bernhardt@googlemail.com>

--- a/packages/server-web/src/static/index.html
+++ b/packages/server-web/src/static/index.html
@@ -13,8 +13,7 @@
       #messages li:nth-child(odd) { background: #eee; }
     </style>
   </head>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="./client.js" type="application/javascript"></script>
+  <script src="./client.js" type="module"></script>
   <body>
     <h1>Todastic</h1>
     <p>the musical</p>
