--- a/packages/server-web/src/index.html
+++ b/packages/server-web/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <title>Todastic - the musical</title>
+    <title>Todastic - progress on every level</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
