--- a/packages/server-web/src/client/asset/index.html
+++ b/packages/server-web/src/client/asset/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>Todastic - progress on every level</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="./client.dist.js" type="module"></script>
+    <script src="/client.dist.js" type="module"></script>
   </body>
 </html>
