--- a/packages/server-web/src/asset/index.html
+++ b/packages/server-web/src/asset/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/client.dist.js" type="module"></script>
+    <script src="/client.js" type="module"></script>
   </body>
 </html>
